# coro

./: .gitignore  Allocators.md  CMakeLists.txt  ChangeLog  README.md  config-builds  do-build  requirements.cmake
.circleci/: CMakeLists.txt  config.yml
.github/: FUNDING.yml
examples/: CMakeLists.txt  primes-1-generator.cpp  primes-2-stream.cpp  primes-3-optimised.cpp  primes-4-allocator.cpp  primes.cpp  primes.md
include/felspar/: control.hpp  prefer_copy.hpp
include/felspar/coro/: allocator.hpp  always.hpp  bus.hpp  cancellable.hpp  coroutine.hpp  eager.hpp  forward.hpp  future.hpp  generator.hpp  lazy.hpp  start.hpp  starter.hpp  stream.hpp  task.hpp  to_stream.hpp
test/: CMakeLists.txt
test/headers/: CMakeLists.txt  allocator.cpp  always.cpp  bus.cpp  cancellable.cpp  eager.cpp  future.cpp  lazy.cpp  start.cpp  task.cpp  to_stream.cpp
test/run/: CMakeLists.txt  bus.cpp  eager.cpp  generator.cpp  lazy.cpp  starter.cpp  stream.cpp  task.cpp
